# rcll_viz_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: GameInfo.msg  Machine.msg  MachineInit.msg  MachineStatus.msg  Machines.msg  MachinesStatus.msg  Product.msg  Products.msg  Robot.msg  Robots.msg  SetGameField.msg  SetMachines.msg  SetRobot.msg
