<?xml version="1.0"?>
<package format="2">
  <name>rcll_vis_msgs</name>
  <version>1.0.0</version>
  <description>The rcll_vis_msgs package</description>
  <maintainer email="florian.eith@web.de">Florian Eith</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ethflo/rcll_vis_msgs</url>
  <author email="florian.eith@web.de">Florian Eith</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
